# pypi-test-8412384

./: .gitignore  CHANGELOG.md  Makefile  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: version.yml
pypi-test-8412384/: __init__.py
pypi-test-8412384/cli/: main.py
pypi_test_8412384/: __init__.py
pypi_test_8412384/cli/: __init__.py  main.py
